[project]
name = "tile2wall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
]

[project.scripts]
tile2wall = "tile2wall:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
